# shallot

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
