[tool.poetry]
name = "shallot"
version = "0.1.0"
description = "A serverless application for publishing AWS layers"
authors = ["DanielMartinAlarcon <daniel.ma@verypossible.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sagemaker = "^1.44"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
